<resources>
    <string name="app_name">LEADERBOARD2020</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on Github (Link)</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="error">Error</string>
    <string name="title_activity_project_submit">ProjectSubmitActivity</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
</resources>
