<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch1"
    tools:context=".ProjectSubmitActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:liftOnScroll="true">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/submission_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/colorAccent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">

                   <ImageView
                    android:id="@+id/logoXmarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                       android:layout_gravity="left"
                    android:src="@drawable/back1" />

                     <ImageView
                         android:id="@+id/logoXmark3s"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:src="@drawable/ggllogo" />

                 </LinearLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="593dp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Project Submission"

                android:textColor="#FF9800"
                android:textSize="25dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/submission_background"

                app:layout_constraintTop_toBottomOf="@+id/title" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:id="@+id/submit_firstname"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_style"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            android:padding="20dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:id="@+id/submit_lastname"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_style"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:padding="20dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/submit_email"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="20dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/github_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/submit_githublink"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_style"
                        android:hint="@string/project_on_github_link"
                        android:inputType="textEmailAddress"
                        android:padding="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_style"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="22dp"

                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
